--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "redux-thunk": "^2.3.0",
         "sass": "^1.52.1",
         "store-js": "^2.0.4",
+        "styled-components": "^5.3.5",
         "web-vitals": "^1.1.1"
     },
     "scripts": {
