--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "bootstrap": "^5.1.3",
         "config": "^3.3.6",
         "flv.js": "^1.5.0",
+        "millify": "^4.0.0",
         "react": "^17.0.1",
         "react-bootstrap": "^2.4.0",
         "react-dom": "^17.0.1",
